@@ -1,5 +1,12 @@
 2010-04-29  kitone  <kitone@gna.org>
 
+	* plugins/actions/keyframesmanagement/keyframesmanagement.cc:
+	* plugins/actions/wavefrommanagement/waveformmanagement.cc:
+	Fix bug #15942 : Default location in file select dialog (waveform and
+	keyframes).
+
+2010-04-29  kitone  <kitone@gna.org>
+
 	* plugins/actions/keyframesmanagement/keyframesgenerator.cc:
 	Set the video uri.
 
